--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Portfolio-Jessy Ndavi!</title>
+    <title>Portfolio Jessy Ndavi!</title>
+    <link href="css/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <h1>Portfolio
-      Jessy Ndavi</h1.>
+    <h1>Portfolio Jessy Ndavi</h1>
   </body>
 </html>
