--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
   <body>
     <h1>Portfolio Jessy Ndavi</h1>
     <img src="css/images.jpeg" alt="A photo of me">
+    p>Here are links of some of my projects just done <a href="https://github.com/jessyndavi/tiger.git">tiger<a>.</p>
   </body>
 </html>
