--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <img src="css/images.jpeg" alt="A photo of me">
     p>Here are links of some of my projects just done <a href="https://github.com/jessyndavi/tiger.git">tiger<a>.</p>
   <p>The tiger project is a trial of an example of a webpage in HTML</p>
-        <h2>A brief About Me<h2/>    
+    <h2>A brief About Me</h2>   
   </body>
 </html>
