--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <img src="css/images.jpeg" alt="A photo of me">
     p>Here are links of some of my projects just done <a href="https://github.com/jessyndavi/tiger.git">tiger<a>.</p>
   <p>The tiger project is a trial of an example of a webpage in HTML</p>
-    <h2>A brief About Me</h2>   
-  </body>
+    <h2>A brief About Me:</h2> 
+    <ol>
+      <li>My Background;
+        <ul>
+          <li>Am eighteen years old.</li>
+          <li>Am through with the Secondary studies.</li>
+          <li>I will be joining campus this year(JKUAT) To do IT.</li>
+         <ul>
+        </body>
 </html>
