--- a/index.html
+++ b/index.html
@@ -18,5 +18,10 @@
           <li>I will be joining campus this year(JKUAT) To do IT.</li>
          </ul>
     </ol>
+    <p>Here are some of my hobbies</p>
+    <ul>
+      <li>Travelling</li>
+      <li>Taking Nature Walks</li>
+      <li>Swimming</li>
         </body>
 </html>
