--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <li>I will be joining campus this year(JKUAT) To do IT.</li>
          </ul>
     </ol>
-    <p>Here are some of my hobbies</p>
+    <p>Here are some of <strong>my hobbies</strong>!</p>
     <ul>
       <li>Travelling</li>
       <li>Taking Nature Walks</li>
