--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <h1>Portfolio Jessy Ndavi</h1>
     <img src="css/images.jpeg" alt="A photo of me">
-    p>Here are links of some of my projects just done <a href="https://github.com/jessyndavi/tiger.git">tiger<a>.</p>
+    p>Here are <em>links</em> of some of my projects just done <a href="https://github.com/jessyndavi/tiger.git">tiger<a>.</p>
   <p>The tiger project is a trial of an example of a webpage in HTML</p>
     <h2>A brief About Me.</h2> 
     <ol>
